@@ -12,7 +12,8 @@ asasm_CFLAGS = -D_GNU_SOURCE -std=c99 \
 	-DGCCSDK_REVISION=\"$(shell svnversion -n ${srcdir} /trunk/gcc4/riscos/asasm)\"
 asasm_LDFLAGS = -lm
 asasm_SOURCES=area.c asm.c code.c decode.c depend.c \
-	directive_data.c directive_file.c directive_misc.c directive_symbol.c \
+	directive_data.c directive_file.c directive_misc.c \
+	directive_storagemap.c directive_symbol.c \
 	error.c \
 	eval.c expr.c filename.c filestack.c fix.c frame.c get.c help_cop.c \
 	help_cpu.c \
@@ -20,5 +21,5 @@ asasm_SOURCES=area.c asm.c code.c decode.c depend.c \
 	local.c macros.c main.c m_cop.c m_copmem.c m_cpu.c m_cpuctrl.c \
 	m_cpumem.c m_fpe.c opt.c option.c os.c output.c phase.c \
 	predef_reg.c put.c reloc.c state.c \
-	storage.c strdup.c symbol.c targetcpu.c \
+	strdup.c symbol.c targetcpu.c \
 	value.c variables.c whileif.c
